Phase5/negative_tests/prog9.dlp
//Missing ';' in for loop
for(var x = 2;) {
    break;
}